Revision history for Perl extension PPI

1.xxx
	Details:
	- Fixed #21571 symbol() returns just sigil with adjacent braces

1.117   Sat 02 Sep 2006
	Summary:
	- Fixing bugs introduced in 1.116

	Details:
	- Simple compound statements "{ 1 }" were not end-detecting properly
	- The new handling for the "-" character was shortcutting naively
	- Labelled compound statements were not end-detecting properly
	- { package => 1 } was treating package incorrectly
	- Fixed bugs in test cases submitted by the Perl::Critic team
	- Added a number of extra test cases, and introduced Test::Object
          based testing for PPI::Document objects.

1.116   Thu 31 Aug 2006
	Summary:
        - PPI::Document::File first release
	- Adding readonly attribute
	- Fixed various accumulated bugs

	Details:
	- Upgraded to Module::Install 0.63
        - Add a new file-only subclass of PPI::Document
	- Added the readonly attribute to the PPI::Document->new constructor
	- Added method PPI::Document->readonly method
        - 'goto' is a PPI::Statement::Break
	- Re-fixed #19629: End of list mistakenly seen as end of statement
	- Applied #16892: [PATCH] docs and comments
	- Fixed #16815 (location of Structure::List is not defined.)
	- Fixed misparsing of C< 1-1 >
	- Fixed #18413: PPI::Node prune() implementation broken
	- Fixed #20428 (minor doc bug in PPI::Token::Symbol)
	- Resolved NOTABUG #20031 (PPI installation)
	- Resolved NOTABUG #20038 (PPI installation)
	- Fixed #19883: 'package' bareword used as hash key is detected as package statement
	- Fixed #19629: End of list mistakenly seen as end of statement
	- Fixed #15043: (no description)  # He wanted PPI::Document::File

1.115   Sat 03 Jun 2006
	Summary:
	- Fixing rt.cpan.org bugs

	Details:
	- Fixed #19614: Suspicious code in PPI::Structure
	- Fixed #16831: until () { } not parsed as compound statement
	- NOTABUG #16834: "$a = 1 if ($a == 2)" vs "$a = 1 if $a == 2"
	- Fixed #19629: End of list mistakenly seen as end of statement